# umamoe-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  affinity.py  compose.local.yml  docker-image.yml  openapi.yaml
deploy/: backend.compose.yml  backend.env.example
migrations/: 20260120000000_fix_daily_stats_average.sql  20260211000000_add_user_fan_rankings.sql  20260213000000_add_user_fan_rankings_update.sql  20260214000000_add_circle_to_rankings.sql  20260214000001_add_next_month_start.sql  20260215000000_add_circle_name_gin_indexes.sql  20260215000001_alltime_per_sort_ranks.sql  20260215000002_alltime_simplified_ranks.sql  20260215000003_alltime_from_raw_data.sql  20260215000004_alltime_from_raw_data_fixed.sql  20260228000000_fix_circle_live_ranks_date.sql  20260301000000_delay_circle_live_ranks.sql  20260301000001_fix_circle_live_ranks_upper_bound.sql  20260306000000_use_live_points_for_ranking.sql  20260306000001_fix_march_daily_fans_gaps.sql  20260309000000_add_user_accounts.sql  20260309000001_add_user_identities.sql  20260311000000_add_circle_ranks_archive.sql  20260311000001_add_api_keys.sql  20260311000002_add_api_key_usage.sql  20260312000000_profile_privacy.sql  20260316000000_add_veteran_characters.sql  20260316000002_add_succession_chara_array.sql  20260321000001_add_veteran_pins.sql  20260321000003_hash_emails.sql  20260331000000_fix_daily_fans_array_bounds.sql  20260331000001_fix_daily_fans_shifted_element.sql  20260331000002_fix_daily_fans_leading_zeros.sql  20260401000000_rebuild_ranking_views.sql  (+63 more)
(+41 files in other folders)
