[package]
name = "honsemoe-backend-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "json"] }
rust_decimal = "1.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Rate limiting and bot protection
tower_governor = "0.4"
governor = "0.6"
dashmap = "6.0"
redis = { version = "0.32", default-features = false, features = ["tokio-comp"] }

# Cryptography (email hashing)
hmac = "0.12"
hex = "0.4"

# Environment
dotenvy = "0.15"

# HTTP client (for external API calls if needed)
reqwest = { version = "0.12", features = ["json"] }
serde_qs = "0.15.0"
url = "2.5.7"

# Authentication
jsonwebtoken = "9"
oauth2 = "5"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2"
async-trait = "0.1"

# Streaming / SSE
futures = "0.3"
tokio-stream = "0.1"
